--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ readme = "README.md"
 keywords = ["nonebot", "nonebot2", "genshin", "panel", "card"]
 
 [tool.poetry.dependencies]
-python = ">=3.7.3,<4.0"
-nonebot2 = ">=2.0.0a16"
+python = ">=3.8,<4.0"
+nonebot2 = ">=2.0.0b3"
 nonebot-adapter-onebot = ">=2.0.0b1"
 httpx = ">=0.20.0, <1.0.0"
 playwright = ">=1.18.2"
