--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nonebot-plugin-gspanel"
-version = "0.1.8"
+version = "0.1.9"
 description = "Genshin player cards plugin for NoneBot2"
 authors = ["monsterxcn <monsterxcn@gmail.com>"]
 documentation = "https://github.com/monsterxcn/nonebot-plugin-gspanel#readme"
@@ -14,7 +14,7 @@ python = ">=3.8,<4.0"
 nonebot2 = ">=2.0.0b3"
 nonebot-adapter-onebot = ">=2.0.0b1"
 httpx = ">=0.20.0, <1.0.0"
-playwright = ">=1.18.2"
+nonebot-plugin-htmlrender = ">=0.0.4"
 
 [tool.poetry.dev-dependencies]
 
