--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nonebot-plugin-gspanel"
-version = "0.2.5.fix1"
+version = "0.2.5.dev1"
 description = "Genshin player cards plugin for NoneBot2"
 authors = ["monsterxcn <monsterxcn@gmail.com>"]
 documentation = "https://github.com/monsterxcn/nonebot-plugin-gspanel#readme"
@@ -15,6 +15,7 @@ nonebot2 = ">=2.0.0b3"
 nonebot-adapter-onebot = ">=2.0.0b1"
 httpx = ">=0.20.0, <1.0.0"
 nonebot-plugin-htmlrender = ">=0.2.0.1"
+playwright = ">=1.25.0"
 
 [tool.poetry.dev-dependencies]
 
