--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,12 +18,13 @@ nonebot-plugin-htmlrender = ">=0.2.0.1"
 playwright = ">=1.25.0"
 
 [tool.poetry.group.dev.dependencies]
-pycln = "^2.1.2"
-pyupgrade = "^3.3.0"
-black = "^22.10.0"
-flake8 = "^5.0.4"
-isort = "^5.10.1"
-pre-commit = "^2.19.0"
+black = "^22.12.0"
+flake8 = "^6.0.0"
+flake8-pyproject = "^1.2.2"
+isort = "^5.12.0"
+pre-commit = "^3.0.2"
+pycln = "^2.1.3"
+pyupgrade = "^3.3.1"
 
 [tool.black]
 line-length = 88
@@ -31,6 +32,25 @@ target-version = ["py38", "py39", "py310", "py311"]
 include = '\.pyi?$'
 extend-exclude = '''
 '''
+
+[tool.flake8]
+exclude = [
+  ".git",
+  "__pycache__",
+  "build",
+  "dist",
+  ".venv",
+]
+max-line-length = 88
+# W292: No newline at end of file
+# W391: Blank line at end of file
+# W503: Line break occurred before a binary operator
+# E203: Whitespace before ':'
+ignore = ["W292", "W391", "W503", "E203"]
+# F401: Module imported but unused
+per-file-ignores = [
+  "__init__.py:F401",
+]
 
 [tool.isort]
 profile = "black"
