--- a/.github/workflows/update-char.yml
+++ b/.github/workflows/update-char.yml
@@ -4,9 +4,9 @@ on:
     workflow_dispatch:
 
 jobs:
-  build:
+  update:
     name: Update characters
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@master
