--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,13 @@ readme = "README.md"
 keywords = ["nonebot", "nonebot2", "genshin", "panel", "card"]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0"
+python = ">=3.8.1,<4.0"
 nonebot2 = ">=2.0.0b3"
 nonebot-adapter-onebot = ">=2.0.0b1"
 httpx = ">=0.20.0, <1.0.0"
 nonebot-plugin-htmlrender = ">=0.2.0.1"
-playwright = ">=1.25.0"
+playwright = ">=1.25.0"  # chrome compatibility of `:has()`
+attrs = ">=20.1.0"       # attrs 20.1.0 adds `@frozen`
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
